<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_refresh">Verversen</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_share">Delen</string>
    <string name="add_location">Locatie toevoegen</string>
    <string name="app_name">Buienalarm</string>
    <string name="banner_home_ad_unit_id">/95473973/Buienalarm_NL_ANDROID_Home_320x50</string>
    <string name="banner_overlay_ad_unit_id">/95473973/Buienalarm_NL_ANDROID_Map_300x250</string>
    <string name="cancel">Annuleren</string>
    <string name="choose_location">Kies een locatie</string>
    <string name="close">Sluiten</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">OK</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="current_location">Actuele locatie</string>
    <string name="decline">Decline</string>
    <string name="delete_location_warning">Wilt u deze locatie verwijderen?</string>
    <string name="delete_location_warning_title">Locatie verwijderen</string>
    <string name="dialog_invalid_setting_message">De update-interval mag niet langer zijn dan de waarschuwingsperiode, omdat anders veel buien waarschijnlijk gemist worden door Buienalarm. Daarom wordt deze instelling niet geaccepteerd.</string>
    <string name="dialog_invalid_setting_title">Ongeldige instelling</string>
    <string name="dont_show_next_time">Volgende keer niet weergeven</string>
    <string name="firstrun_disc_page0">"Bedankt voor het installeren van Buienalarm. In enkele stappen is de app meteen klaar voor gebruik! Druk op 'VOLGENDE' om door te gaan."</string>
    <string name="firstrun_disc_page1">Kies hier het land waar je Buienalarm gebruikt. Zo kunnen we alvast een paar dingen automatisch instellen.</string>
    <string name="firstrun_disc_page2">Buienalarm kan bijhouden waar je bent en je daar waarschuwen voor naderende neerslag. Handig! Maar wil je liever niet dat we je locatie bijhouden? Zet dat dan hieronder uit en voeg zelf locaties toe in de instellingen van de app.</string>
    <string name="firstrun_label_page0">Buienalarm geeft tot op 5 minuten nauwkeuring aan waar, hoelang en hoeveel neerslag er valt.</string>
    <string name="firstrun_label_page1">Krijg een melding als er neerslag op uw, of de door u ingestelde locatie valt. Uiteraard kunt u notificaties pauzeren.</string>
    <string name="firstrun_label_page2">Selecteer uw land</string>
    <string name="firstrun_my_location">Gebruik mijn locatie</string>
    <string name="firstrun_next">VOLGENDE</string>
    <string name="firstrun_previous">VORIGE</string>
    <string name="firstrun_ready">KLAAR</string>
    <string name="firstrun_set_my_location">MIJN LOCATIES INSTELLEN</string>
    <string name="firstrun_title_page0">Welkom bij Buienalarm</string>
    <string name="firstrun_title_page1">Kies een land</string>
    <string name="firstrun_title_page2">Volg mijn locatie</string>
    <string name="graph_loading">Laden …</string>
    <string name="loc_dialog_close">SLUIT</string>
    <string name="loc_dialog_settings">BEHEER</string>
    <string name="locality_unknown">Onbekend</string>
    <string name="location_preferences_dynamic_location_category_title">Volg mijn locatie</string>
    <string name="location_preferences_dynamic_location_summary">Krijg neerslagwaarschuwingen voor de plek waar je bent</string>
    <string name="location_preferences_dynamic_location_title">Volg mijn locatie</string>
    <string name="location_preferences_static_locations">Vaste locaties (maximaal %d)</string>
    <string name="location_settings_name">Mijn locaties</string>
    <string name="mainactivity_first_enter_data">Voer je locaties eerst in!</string>
    <string name="maximum_nr_of_locations_reached">Het maximale aantal locaties is bereikt. Verwijder een andere locatie en probeer het nogmaals.</string>
    <string name="namespace">org.yoki.android.buienalarm</string>
    <string name="no_location_placeholder">Geen locaties toegevoegd</string>
    <string name="no_network_connection">Geen netwerkverbinding. Probeer het later nog eens.</string>
    <string name="precipitation_level">Hoeveelheid neerslag</string>
    <string name="precipitation_level_summary">De minimale neerslag waarvoor een notificatie moet worden gegeven</string>
    <string name="preferences_category_forecast">Instellingen voor neerslagverwachting</string>
    <string name="preferences_category_general">Algemene instellingen</string>
    <string name="preferences_category_notification_pause">Meldingen tijdelijk pauzeren</string>
    <string name="preferences_category_notifications">Instellingen voor meldingen</string>
    <string name="preferences_category_version">Over Buienalarm</string>
    <string name="preferences_country_frequency">Land</string>
    <string name="preferences_led_enabled">LED knipperen</string>
    <string name="preferences_locations">Mijn locaties</string>
    <string name="preferences_locations_summary">Wijzig de locaties waarvoor de neerslagverwachting moet worden bijgehouden</string>
    <string name="preferences_notification_pause">Meldingen tijdelijk pauzeren</string>
    <string name="preferences_notification_period">Waarschuwingsperiode</string>
    <string name="preferences_notification_period_summary">De lengte van de periode waarin vooraf een waarschuwing gegeven moet worden.</string>
    <string name="preferences_notifications_enabled">Meldingen inschakelen</string>
    <string name="preferences_ringtone">Geluid selecteren</string>
    <string name="preferences_start_time">Begin van pauze</string>
    <string name="preferences_start_time_summary">Tijdstip waarop meldingen moeten stoppen</string>
    <string name="preferences_stop_time">Einde van pauze</string>
    <string name="preferences_stop_time_summary">Tijdstip waarop meldingen moeten worden hervat</string>
    <string name="preferences_update_frequency">Update-interval</string>
    <string name="preferences_update_frequency_summary">De frequentie van updates</string>
    <string name="preferences_vibration_enabled">Trillen</string>
    <string name="refresh">Vernieuwen</string>
    <string name="route_unknown">Onbekend</string>
    <string name="save">Opslaan</string>
    <string name="save_custom_name">"Geef een naam op voor de locatie (bv. 'Thuis' of 'Werk'):"</string>
    <string name="settings_name">Instellingen</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="tab_graph">GRAFIEK</string>
    <string name="tab_weathermap">RADAR</string>
    <string name="transition_graph_view">transition_graph_view</string>
    <string name="unknown">-</string>
    <string name="widget_action_on_tap">Actie bij tikken op widget</string>
    <string name="widget_inactive">Widget inactief</string>
    <string name="widget_location">Locatie voor widget</string>
    <string name="widget_name">Buienalarm</string>
    <string name="widget_no_locations_warning">Er kan geen widget toegevoegd worden. Voeg eerst een locatie toe in Buienalarm.</string>
</resources>
