<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/location_settings_name" />
    <View android:background="@color/color_divider_locations" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <ListView android:id="@id/dialog_location_listview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@color/color_divider_locations" android:dividerHeight="1.0dip" />
    <View android:background="@color/color_divider_locations" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RelativeLayout android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="@color/color_tertiary" android:id="@id/dialog_location_manage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_dialog_settings" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="?android:attr/borderlessButtonStyle" />
        <Button android:textColor="@color/color_tertiary" android:id="@id/dialog_location_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_dialog_close" android:layout_toLeftOf="@id/dialog_location_manage" android:layout_alignParentTop="true" android:layout_toStartOf="@id/dialog_location_manage" style="?android:attr/borderlessButtonStyle" />
    </RelativeLayout>
</LinearLayout>